# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: pyci.yml
gendiff/: cli.py  formatter.py  generate_diff.py  make_diff_tree.py  parse_file.py  parse_json.py  parser.py
gendiff/modules/: funcs.py  help.py
gendiff/scripts/: gendiff.py  help.py
gendiff/styles/: __init__.py  json.py  plain.py  stylish.py  to_json.py  to_plain.py  to_stylish.py
tests/: test_gendiff.py
tests/test_data/: file1_tree.json  file2_tree.json  tree_diff_json.txt
